Fixes evolution and hp rendering